--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   src:
-    url("../fonts/ptsans-400.woff2") format ("woff2");
+    url("../fonts/ptsans-400.woff2") format("woff2");
 }
 
 @font-face {
@@ -11,15 +11,17 @@
   font-style: normal;
   font-weight: 700;
   src:
-    url("../fonts/ptsans-700.woff2") format ("woff2");
+    url("../fonts/ptsans-700.woff2") format("woff2");
 }
 
 body {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   line-height: 21px;
   background: #FFFFFF;
   color: #000000;
+  margin: 0;
+  padding: 0;
 }
 
 .button-blue {
@@ -136,6 +138,7 @@ body {
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
+  color: #000000;
 }
 
 .feedback {
